# routes/recipes.js
@@ -7,18 +7,6 @@ const DButils = require("./utils/DButils");
 router.get("/", (req, res) => res.send("im here"));
 
 
-router.get("/w", async (req, res, next) => {
-  try {
-    // check that username exists
-    const users = await DButils.execQuery("SELECT username FROM users");
-    if (users.find((x) => x.username === req.body.username))
-      res.send(req.body.username);
-  } catch (error) {
-      next(error);
-  }
-});
-
-
 /**
  * This path returns a full details of a recipe by its id
  */
@@ -33,9 +21,9 @@ router.get("/w", async (req, res, next) => {
   }
   });
   
-  router.get("/recipesByName", async (req, res, next) => {
+  router.get("/recipesByName/:recipesName/:number?", async (req, res, next) => {
     try {
-      const recipe = await recipes_utils.getRecipeByName(req.body.recipesName,req.body.number);
+      const recipe = await recipes_utils.getRecipeByName(req.params.recipesName,req.params.number);
       res.send(recipe);
     } catch (error) {
       next(error);
@@ -43,14 +31,13 @@ router.get("/w", async (req, res, next) => {
   
   });
   
-  router.get("/FullRecipe", async (req, res, next) => {
+  router.get("/FullRecipe/:recipeId", async (req, res, next) => {
     try {
-      const recipe = await recipes_utils.getRecipeFullDetails(req.body.recipeId);
+      const recipe = await recipes_utils.getRecipeFullDetails(req.params.recipeId);
       res.send(recipe);
     } catch (error) {
       next(error);
     }
-  
   });
 
 router.get("/:recipeId", async (req, res, next) => {
@@ -62,10 +49,6 @@ router.get("/:recipeId", async (req, res, next) => {
   }
 
 });
-
-
-
-
 
 
 module.exports = router;
